--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
 .mc-lists.el
 auto-save-list
 backups
+bookmarks
 el-get
 elpa
+emacs-customizations.el
 eshell
+git
 org-files
 projectile*
 recentf
+secrets.el
 smex*
-bookmarks
-emacs-customizations.el
-git
+url
